fdo#67699: Remove a whole bunch of old hacks.

The new format detection service is much simpler than the old one.

In the new framework, each detection service receives the name of format
that it is expected to check against, and it should either reject it by
returning an empty string in case the file is not of that format, or
if the file is indeed that format, set the appropriate filter name and
return that type to the caller.

We no longer need to deal with preselected filters (which is dealt with
in the detection framework itself) or return an entirely different format
that's different from the one being asked to verify.

Change-Id: I3f36951b0ad821d836fb8a56b852e40d43095f09